# auto-cv

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  concept.md  data-model.md  language-policy.md  local-ai.md  private-engine.md  roadmap.md  v1-scope.md
scripts/: launch_autocv.pyw
src/autocv/: __init__.py
src/autocv/ai/: __init__.py  local_runner.py  model_profile.py  server_manager.py  status.py
src/autocv/app/: __init__.py  main.py  runtime.py  user_log.py
src/autocv/conversion/: __init__.py  contracts.py  local_converter.py  public_stub.py
src/autocv/documents/: __init__.py  cover_letter_writer.py  edit_session.py  naming.py  result_workspace.py  scanner.py  source.py  trash.py
src/autocv/domain/: __init__.py  entities.py  status.py
src/autocv/engine/: __init__.py  contracts.py  loader.py  public_stub.py
src/autocv/i18n/: __init__.py  fr_fr.py
src/autocv/infrastructure/: __init__.py  database.py  (+1 more)
tests/: __init__.py  test_ai_server_manager.py  test_conversion_contracts.py  test_cover_letter_writer.py  test_document_edit_session.py  test_document_naming.py  test_document_scanner.py  test_document_source.py  test_domain_entities.py  test_engine_boundary.py  test_github_project_context.py  test_language_policy.py  test_local_ai_profile.py  test_local_conversion.py  test_mail_contracts.py  test_main_window.py  test_repositories.py  test_runtime.py  test_settings_manager.py  test_user_log.py  test_v1_ai_service.py  test_v1_use_cases.py
(+18 files in other folders)
